# tinkoff-pattern-match

./: CMakeLists.txt  README.md  main.cpp
include/: actions.h  constants.h  figureImages.h  gameModel.h  matrixPoint.h  screenReader.h  stepOrder.h  stepOrderGenerator.h  stepProfit.h
src/: actions.cpp  figureImages.cpp  gameModel.cpp  main.cpp  matrixPoint.cpp  screenReader.cpp  stepOrder.cpp  stepOrderGenerator.cpp  stepProfit.cpp  test.cpp
